# CAP-Proyecto

./: CMakeLists.txt  README.md  README.txt  graficar.py  main.cpp  main_prueba.cpp  renderer.hpp  resultados_cpu.txt  resultados_gpu.txt  script.py  solver.hpp  solver_base.hpp  solver_gpu.cu  solver_gpu.hpp  verlet_app
src/: main_og_prueba.cpp  main_prueba.cpp
src/gpu/: gpu_solver.cu  gpu_solver.hpp  test_gpu.cu
src/physics/: physic_object.hpp  physics.hpp
utils/: math.hpp  number_generator.hpp
